# rumil

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.bat  build.sh
docs/: 2_functions.md  3_flow_control.md  4_operators.md  5_collections.md  7_predication.md  9_inheritance.md  README.md
docs/cli/: README.md
docs/planned/: 0_conventions.md  1_types.md  6_looping.md  8_typecasting.md
example/: hello_world.rum  hello_world.rumil
frontend/src/: tokenizer.rs
include/: rumil.h
lib/: Cargo.toml
lib/src/: ast.rs  expr.rs  lexer.rs  lib.rs  log.rs  parser.rs  token.rs
scripts/: lib_version.py
src/: main.cpp  main.rs  rumil.cpp  rumil.h
src/cli/: cli.cpp  cli.hpp
src/compiler/: compiler.cpp  compiler.h
src/context/: context.hpp
src/interpreter/: interpreter.cpp  interpreter.h
src/parser/src/: ast.rs  lib.rs
